--- a/index.html
+++ b/index.html
@@ -34,15 +34,20 @@
             <p class="temp">20°C Sunny</p>
             <a href=""><img src="/img/icons8-go-back-100.png" alt="left" id="img-left"></a>
             <a href=""><img src="/img/icons8-circled-right-100.png" alt="right" id="img-right"></a>
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-            <section>
-                
-            </section>
+            <div class="container">
+                <section>
+                    <p class="label">Flights per day</p>  
+                    <p class="numbers">09</p>          
+                </section>
+                <section>
+                    <p class="label">Next Flight</p>
+                    <p class="numbers">08:15</p>
+                </section>
+                <section>
+                    <p class="label">Get your ticket<br>for the lowest price.</p>
+                    <button type="submit">More Info</button>
+                </section>
+            </div>
         </article>
         <article id="iceland">
 
