--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <h1>PRAGUE</h1>
             <p>Czech Republic</p>
             <p class="temp">18°C Cloudy</p>
-            <a onclick="slideControl(-1)"><img src="/img/icons8-go-back-100.png" alt="left" id="img-left"></a>
-            <a onclick="slideControl(1)"><img src="/img/icons8-circled-right-100.png" alt="right" id="img-right"></a>
+            <a onclick="slideControl(-1)"><img src="TravelApp/img/icons8-go-back-100.png" alt="left" id="img-left"></a>
+            <a onclick="slideControl(1)"><img src="TravelApp/img/icons8-circled-right-100.png" alt="right" id="img-right"></a>
             <div class="container">
                 <section>
                     <p class="label">Flights per day</p>  
@@ -52,8 +52,8 @@
             <h1>TOKYO</h1>
             <p>Japan</p>
             <p class="temp">30°C Sunny</p>
-            <a onclick="slideControl(-1)"><img src="/img/icons8-go-back-100.png" alt="left" id="img-left"></a>
-            <a onclick="slideControl(1)"><img src="/img/icons8-circled-right-100.png" alt="right" id="img-right"></a>
+            <a onclick="slideControl(-1)"><img src="TravelApp/img/icons8-go-back-100.png" alt="left" id="img-left"></a>
+            <a onclick="slideControl(1)"><img src="TravelApp/img/icons8-circled-right-100.png" alt="right" id="img-right"></a>
             <div class="container">
                 <section>
                     <p class="label">Flights per day</p>  
@@ -73,8 +73,8 @@
             <h1>JÖKULSÁRLÓN</h1>
             <p>Iceland</p>
             <p class="temp">-4°C Freezing</p>
-            <a onclick="slideControl(-1)"><img src="/img/icons8-go-back-100.png" alt="left" id="img-left"></a>
-            <a onclick="slideControl(1)"><img src="/img/icons8-circled-right-100.png" alt="right" id="img-right"></a>
+            <a onclick="slideControl(-1)"><img src="TravelApp/img/icons8-go-back-100.png" alt="left" id="img-left"></a>
+            <a onclick="slideControl(1)"><img src="TravelApp/img/icons8-circled-right-100.png" alt="right" id="img-right"></a>
             <div class="container">
                 <section>
                     <p class="label">Flights per day</p>  
