testing flight api

--- a/test.html
+++ b/test.html
@@ -15,10 +15,15 @@
             <label>From</label>
             <input type="date" name="" id="dateFrom">
             <label>To</label>
-            <input type="date" name="" id="dateTo">
+            <input type="date" name="" id="dateTo">            
     </form>
 
-    <span></span>
+    <p id="from"></p>
+    <p id="to"></p>
+    <h3>Poletanje</h3>
+    <p id="time"></p>
+    <h3>Trajanje leta</h3>
+    <p id="duration"></p>
     
 
     <script src="test.js"></script>
